[gd_scene load_steps=21 format=3 uid="uid://bcl6w6a2jotyl"]

[ext_resource type="Script" path="res://Game/index.gd" id="1_y6gwg"]
[ext_resource type="Texture2D" uid="uid://28oajk16a6v6" path="res://assets/backgrounds/gamescreen.png" id="2_sc2oy"]
[ext_resource type="Texture2D" uid="uid://bv142d00uvou4" path="res://assets/sprites/gems.png" id="3_64dfn"]
[ext_resource type="Script" path="res://Sounds.gd" id="4_g0rw6"]
[ext_resource type="AudioStream" uid="uid://bw1vvajpvxyy4" path="res://assets/sounds/1gem.wav" id="5_unupw"]
[ext_resource type="AudioStream" uid="uid://d3vyfyqs54nhl" path="res://assets/sounds/2gems.wav" id="6_wxg3l"]
[ext_resource type="AudioStream" uid="uid://h8nd3pftkm7u" path="res://assets/sounds/movement.wav" id="7_nldxa"]
[ext_resource type="AudioStream" uid="uid://bo5ieqqml5ewe" path="res://assets/sounds/non_movement.wav" id="8_rxk82"]
[ext_resource type="AudioStream" uid="uid://6nkwdp23h1f4" path="res://assets/music/song.mp3" id="9_6k7fy"]
[ext_resource type="Theme" uid="uid://ckiied77ueyj" path="res://candlelight_theme.tres" id="10_24mwh"]
[ext_resource type="Texture2D" uid="uid://bwb6qbxp5x718" path="res://resources/keyboard/letter_w.tres" id="11_wwvo0"]
[ext_resource type="Texture2D" uid="uid://bpypmb6kajhjh" path="res://resources/keyboard/letter_a.tres" id="12_tbai0"]
[ext_resource type="Texture2D" uid="uid://cnedws03cbck2" path="res://resources/keyboard/letter_s.tres" id="13_35u35"]
[ext_resource type="Texture2D" uid="uid://cq60c8757qldh" path="res://resources/keyboard/letter_d.tres" id="14_uoqib"]
[ext_resource type="Texture2D" uid="uid://bb1mn7ebyioek" path="res://resources/keyboard/letter_r.tres" id="15_tkgvx"]
[ext_resource type="Texture2D" uid="uid://brgyjbw0y2a18" path="res://resources/keyboard/letter_space.tres" id="16_3nray"]
[ext_resource type="Texture2D" uid="uid://dfvq0ya7jnos1" path="res://resources/keyboard/letter_z.tres" id="17_7x7ev"]
[ext_resource type="Texture2D" uid="uid://c6bir8suabki0" path="res://resources/keyboard/letter_esc.tres" id="18_170w1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fcd4k"]
texture = ExtResource("3_64dfn")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
8:0/0 = 0
9:0/0 = 0
7:0/0 = 0

[sub_resource type="TileSet" id="TileSet_aavhx"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_fcd4k")

[node name="Game" type="Node2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
script = ExtResource("1_y6gwg")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1344.0
offset_bottom = 672.0
texture = ExtResource("2_sc2oy")

[node name="TargetGemTileMap" type="TileMap" parent="."]
position = Vector2(368, 98)
tile_set = SubResource("TileSet_aavhx")
rendering_quadrant_size = 32
format = 2
layer_0/name = "BORDER"
layer_0/tile_data = PackedInt32Array(-1, 262144, 0, 131071, 262144, 0, 196607, 262144, 0, 262143, 262144, 0, 327679, 262144, 0, 393215, 262144, 0, 458751, 262144, 0, 393216, 262144, 0, 393217, 262144, 0, 393218, 262144, 0, 393219, 262144, 0, 393220, 262144, 0, 393221, 262144, 0, 393222, 262144, 0, 327686, 262144, 0, 262150, 262144, 0, 196614, 262144, 0, 131078, 262144, 0, 65542, 262144, 0, 6, 262144, 0, -65530, 262144, 0, -65531, 262144, 0, -65532, 262144, 0, -65533, 262144, 0, -65534, 262144, 0, -65535, 262144, 0, -65536, 262144, 0, 65535, 262144, 0)
layer_1/name = "GEM"
layer_1/tile_data = PackedInt32Array()

[node name="Label" type="Label" parent="TargetGemTileMap"]
offset_left = -32.0
offset_top = -64.0
offset_right = 224.0
offset_bottom = -41.0
text = "Target"
horizontal_alignment = 1

[node name="QueueTileMap" type="TileMap" parent="."]
position = Vector2(80, 98)
tile_set = SubResource("TileSet_aavhx")
rendering_quadrant_size = 32
format = 2
layer_0/name = "BORDER"
layer_0/tile_data = PackedInt32Array(-1, 262144, 0, 131071, 262144, 0, 196607, 262144, 0, 262143, 262144, 0, 327679, 262144, 0, 393215, 262144, 0, 458751, 262144, 0, 393222, 262144, 0, 327686, 262144, 0, 262150, 262144, 0, 196614, 262144, 0, 131078, 262144, 0, 65542, 262144, 0, 6, 262144, 0, -65530, 262144, 0, -65531, 262144, 0, -65532, 262144, 0, -65533, 262144, 0, -65534, 262144, 0, -65535, 262144, 0, -65536, 262144, 0, 65535, 262144, 0, 524287, 262144, 0, 589823, 262144, 0, 655359, 262144, 0, 720895, 262144, 0, 786431, 262144, 0, 851967, 262144, 0, 786432, 262144, 0, 786433, 262144, 0, 786434, 262144, 0, 786435, 262144, 0, 786436, 262144, 0, 786437, 262144, 0, 786438, 262144, 0, 720902, 262144, 0, 655366, 262144, 0, 589830, 262144, 0, 524294, 262144, 0, 458758, 262144, 0)
layer_1/name = "QUEUE"
layer_1/tile_data = PackedInt32Array()

[node name="Label" type="Label" parent="QueueTileMap"]
offset_left = -32.0
offset_top = -64.0
offset_right = 224.0
offset_bottom = -41.0
text = "Queue"
horizontal_alignment = 1

[node name="GameDetailsTileMap" type="TileMap" parent="."]
position = Vector2(368, 418)
tile_set = SubResource("TileSet_aavhx")
rendering_quadrant_size = 32
format = 2
layer_0/name = "BORDER"
layer_0/tile_data = PackedInt32Array(-1, 262144, 0, 131071, 262144, 0, 196607, 262144, 0, 262143, 262144, 0, 327679, 262144, 0, 393215, 262144, 0, 327686, 262144, 0, 262150, 262144, 0, 196614, 262144, 0, 131078, 262144, 0, 65542, 262144, 0, 6, 262144, 0, -65530, 262144, 0, -65531, 262144, 0, -65532, 262144, 0, -65533, 262144, 0, -65534, 262144, 0, -65535, 262144, 0, -65536, 262144, 0, 65535, 262144, 0, 327680, 262144, 0, 327681, 262144, 0, 327682, 262144, 0, 327683, 262144, 0, 327684, 262144, 0, 327685, 262144, 0)
layer_1/name = "QUEUE"
layer_1/tile_data = PackedInt32Array()

[node name="GameDetailsLabel" type="Label" parent="GameDetailsTileMap"]
offset_left = -32.0
offset_top = -64.0
offset_right = 224.0
offset_bottom = -41.0
text = "Stats"
horizontal_alignment = 1

[node name="Control" type="Control" parent="GameDetailsTileMap"]
layout_mode = 3
anchors_preset = 0
offset_right = 192.0
offset_bottom = 160.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameDetailsTileMap/Control"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 160.0
alignment = 1

[node name="GameDetailsValue" type="RichTextLabel" parent="GameDetailsTileMap/Control/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Scoring"
fit_content = true

[node name="BoardTileMap" type="TileMap" parent="."]
position = Vector2(684, 161)
tile_set = SubResource("TileSet_aavhx")
rendering_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(-1, 262144, 0, 131071, 262144, 0, 196607, 262144, 0, 262143, 262144, 0, 327679, 262144, 0, 393215, 262144, 0, -65533, 262144, 0, -65534, 262144, 0, -65535, 262144, 0, -65536, 262144, 0, 65535, 262144, 0, 458751, 262144, 0, 524287, 262144, 0, 589823, 262144, 0, 655359, 262144, 0, 720895, 262144, 0, 655360, 262144, 0, 655361, 262144, 0, 655362, 262144, 0, 655363, 262144, 0, 655364, 262144, 0, 655365, 262144, 0, 655366, 262144, 0, 655367, 262144, 0, -65528, 262144, 0, 655368, 262144, 0, -65527, 262144, 0, 655369, 262144, 0, -65526, 262144, 0, 655370, 262144, 0, -65525, 262144, 0, -65524, 262144, 0, 655372, 262144, 0, 655371, 262144, 0, 655373, 262144, 0, -65523, 262144, 0, -65532, 262144, 0, -131068, 262144, 0, -196604, 262144, 0, -262140, 262144, 0, -262136, 262144, 0, -196600, 262144, 0, -131064, 262144, 0, 589837, 262144, 0, 524301, 262144, 0, 458765, 262144, 0, 393229, 262144, 0, 327693, 262144, 0, 262157, 262144, 0, 196621, 262144, 0, 131085, 262144, 0, 65549, 262144, 0, 13, 262144, 0, -262139, 262144, 0, -262138, 262144, 0, -262137, 262144, 0)
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array()
layer_3/z_index = 3
layer_3/tile_data = PackedInt32Array()

[node name="LevelCompleteTimer" type="Timer" parent="."]
one_shot = true

[node name="Sounds" type="Node" parent="."]
script = ExtResource("4_g0rw6")

[node name="one_gem" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_unupw")

[node name="two_gems" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6_wxg3l")

[node name="movement" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_nldxa")

[node name="nonmovement" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_rxk82")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_6k7fy")

[node name="InstructionsOld" type="RichTextLabel" parent="."]
offset_left = 595.0
offset_top = 503.0
offset_right = 1040.0
offset_bottom = 679.0
bbcode_enabled = true

[node name="SubmitScore" type="Button" parent="."]
offset_left = 144.0
offset_top = 592.0
offset_right = 277.0
offset_bottom = 623.0
theme = ExtResource("10_24mwh")
text = "Submit Score"

[node name="BackButton" type="Button" parent="."]
offset_left = 24.0
offset_top = 592.0
offset_right = 73.0
offset_bottom = 621.0
theme = ExtResource("10_24mwh")
text = "Main Menu"

[node name="Instructions" type="VBoxContainer" parent="."]
offset_left = 656.0
offset_top = 516.0
offset_right = 1132.0
offset_bottom = 648.0
alignment = 1

[node name="0_Move" type="HBoxContainer" parent="Instructions"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="WASD" type="VBoxContainer" parent="Instructions/0_Move"]
layout_mode = 2
alignment = 1

[node name="Row1" type="HBoxContainer" parent="Instructions/0_Move/WASD"]
layout_mode = 2
alignment = 1

[node name="LetterW" type="TextureRect" parent="Instructions/0_Move/WASD/Row1"]
layout_mode = 2
texture = ExtResource("11_wwvo0")
stretch_mode = 3

[node name="Row2" type="HBoxContainer" parent="Instructions/0_Move/WASD"]
layout_mode = 2
alignment = 1

[node name="LetterA" type="TextureRect" parent="Instructions/0_Move/WASD/Row2"]
layout_mode = 2
texture = ExtResource("12_tbai0")
stretch_mode = 3

[node name="LetterS" type="TextureRect" parent="Instructions/0_Move/WASD/Row2"]
layout_mode = 2
texture = ExtResource("13_35u35")
stretch_mode = 3

[node name="LetterD" type="TextureRect" parent="Instructions/0_Move/WASD/Row2"]
layout_mode = 2
texture = ExtResource("14_uoqib")
stretch_mode = 3

[node name="Label" type="Label" parent="Instructions/0_Move"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Move
Shape"
horizontal_alignment = 1

[node name="LetterR" type="TextureRect" parent="Instructions/0_Move"]
layout_mode = 2
texture = ExtResource("15_tkgvx")
stretch_mode = 3

[node name="Label2" type="Label" parent="Instructions/0_Move"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Rotate
Shape"
horizontal_alignment = 1

[node name="1_Place" type="HBoxContainer" parent="Instructions"]
visible = false
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="LetterSpace" type="TextureRect" parent="Instructions/1_Place"]
layout_mode = 2
texture = ExtResource("16_3nray")
stretch_mode = 3

[node name="Label" type="Label" parent="Instructions/1_Place"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Place Shape"
horizontal_alignment = 1

[node name="2_Stack" type="HBoxContainer" parent="Instructions"]
visible = false
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label" type="Label" parent="Instructions/2_Stack"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Place shapes on 
top of each other"
horizontal_alignment = 1

[node name="3_Undo" type="HBoxContainer" parent="Instructions"]
visible = false
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="LetterZ" type="TextureRect" parent="Instructions/3_Undo"]
layout_mode = 2
texture = ExtResource("17_7x7ev")
stretch_mode = 3

[node name="Label" type="Label" parent="Instructions/3_Undo"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Undo Mistakes"
horizontal_alignment = 1

[node name="4_Score" type="HBoxContainer" parent="Instructions"]
visible = false
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label" type="Label" parent="Instructions/4_Score"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Create the target
gem to advance"
horizontal_alignment = 1

[node name="5_Queue" type="HBoxContainer" parent="Instructions"]
visible = false
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label" type="Label" parent="Instructions/5_Queue"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Plan ahead to build
harder target gems"
horizontal_alignment = 1

[node name="6_Done" type="HBoxContainer" parent="Instructions"]
visible = false
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="LetterEsc" type="TextureRect" parent="Instructions/6_Done"]
layout_mode = 2
texture = ExtResource("18_170w1")
stretch_mode = 3

[node name="Label" type="Label" parent="Instructions/6_Done"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Tutorial
complete!"
horizontal_alignment = 1

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
